Initial merging draw buffer